--- a/views/courses/components/topics.hbs
+++ b/views/courses/components/topics.hbs
@@ -223,18 +223,20 @@
 					</a>
 				</div>
 				<!-- ###################  start new Editors button ############################ -->
-				<div class="add-button">
-					<a href="/courses/{{../_id}}/topics/add/neweditor"
-						class="btn btn-add {{#if ../lessons}}btn-secondary w-100{{else}}btn-primary btn-empty{{/if}} center"
-						title="Thema mit neuem Editor hinzufügen (beta)">
-						{{#if ../newLessons}}
-							<span>Weiteres Thema im neuen Editor erstellen (beta)</span>
-							<i class="fa fa-plus-circle plus-icon pull-right"></i>
-						{{else}}
-							<span>Erstelle ein Thema im neuen Editor (beta)</span>
-						{{/if}}
-					</a>
-				</div>
+				{{#if @root.isNewEdtiroActivated}}
+					<div class="add-button">
+						<a href="/courses/{{@root._id}}/topics/add/neweditor"
+							class="btn btn-add {{#if @root.newLessons}}btn-secondary w-100{{else}}btn-primary btn-empty{{/if}} center"
+							title="Thema mit neuem Editor hinzufügen (beta)">
+							{{#if @root.newLessons}}
+								<span>Weiteres Thema im neuen Editor erstellen (beta)</span>
+								<i class="fa fa-plus-circle plus-icon pull-right"></i>
+							{{else}}
+								<span>Erstelle ein Thema im neuen Editor (beta)</span>
+							{{/if}}
+						</a>
+					</div>
+				{{/if}}
 				<!-- ##################### end new Editors button ############################# -->
 			{{/unless}}{{/userHasPermission}}
 	</div>
