--- a/views/courses/components/topics.hbs
+++ b/views/courses/components/topics.hbs
@@ -31,7 +31,7 @@
 	{{/userHasPermission}}
 	<div class="col-sm-12">
 		<div class="list-group">
-			{{#if @root.hasLessons}}
+			{{#if lessons}}
 				<div id="topic-list" data-courseId="{{@root._id}}">
 					{{#each lessons}}
 						{{#unless this.hidden}}
@@ -140,7 +140,6 @@
 				</div>
 			{{/if}}
 			</div>
-
 			{{#userHasPermission "COURSE_EDIT"}}{{#unless @root.isArchived}}
 				<div class="add-button">
 					<a href="/courses/{{../_id}}/topics/add"
@@ -157,7 +156,7 @@
 			{{/unless}}{{/userHasPermission}}
 		</div>
 
-			<!-- ###################  start new Editors button ############################ -->
+			<!-- ###################  start new Editors ############################ -->
 	{{#if @root.isNewEdtiroActivated}}
 		<div class="col-sm-12 mt-3">
 			<div class="list-group">
@@ -168,7 +167,7 @@
 								<!-- TOPIC IS NOT HIDDEN, teacher and student has access -->
 								<div class="card card-topic" onclick="location.href='{{this.url}}'"
 									{{#userHasPermission "COURSE_EDIT"}} data-topicId="{{../_id}}" {{/userHasPermission}}>
-									<div class="card-header">
+									<div class="card-header new-editor">
 										<div class="input-group">
 											{{#userHasPermission "COURSE_EDIT"}}
 												{{#unless @root.isArchived}}
@@ -176,7 +175,7 @@
 														<i class="fa fa-ellipsis-v"></i>
 														<i class="fa fa-ellipsis-v"></i>
 													</a>
-													<a class="btn-hidden-toggle" href="/courses/{{../courseId}}/topics/{{../_id}}" title="Thema verstecken">
+													<a class="btn-hidden-toggle" href="/courses/{{../courseId}}/topics/{{../_id}}/neweditor" title="Thema verstecken">
 														<i class="fa fa-eye"></i>
 													</a>
 												{{/unless}}
@@ -210,7 +209,7 @@
 													<i class="fa fa-ellipsis-v"></i>
 													<i class="fa fa-ellipsis-v"></i>
 												</a>
-												<a class="btn-hidden-toggle" href="/courses/{{../courseId}}/topics/{{../_id}}"
+												<a class="btn-hidden-toggle" href="/courses/{{../courseId}}/topics/{{../_id}}/neweditor"
 													title="Thema wieder anzeigen">
 													<i class="fa fa-eye-slash"></i>
 												</a>
@@ -266,7 +265,7 @@
 							</a>
 						</div>
 				{{/unless}}{{/userHasPermission}}
-				<!-- ##################### end new Editors button ############################# -->
+				<!-- ##################### end new Editors ############################# -->
 		</div>
 	{{/if}}
 </div>
