--- a/views/administration/forms/form-account-password.hbs
+++ b/views/administration/forms/form-account-password.hbs
@@ -2,8 +2,7 @@
     {{> "lib/forms/password-hint"}}
     <div class="form-group">
         <label for="change_password">Passwort:</label>
-        <input id="change_password" type="password" name="password" id="password" class="form-control form-control-lg" placeholder="***************" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
+        <input id="change_password" type="password" autocomplete="new-password" name="password" id="password" class="form-control form-control-lg" placeholder="***************" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
 title="{{> "lib/forms/password-hint" plaintext=true}}" required>
     </div>
-    
 </div>
