--- a/views/authentication/forms/login.hbs
+++ b/views/authentication/forms/login.hbs
@@ -8,8 +8,13 @@
                 <input type="hidden" name="challenge" value={{challenge}} />
 
                 <div class="form-group">
-                    <input type="text" name="username" class="form-control form-control-lg" placeholder="E-Mail / Nutzername" data-testid="username" required>
-                    <input type="password" name="password" class="form-control form-control-lg" placeholder="Passwort" data-testid="password" required>
+                    <input type="email" autocomplete="username" name="username" class="form-control form-control-lg" placeholder="E-Mail / Nutzername" data-testid="username" required>
+                    <div class="input-group mt-1" id="show_hide_password">
+                        <input type="password" autocomplete="current-password" name="password" class="form-control form-control-lg" placeholder="Passwort" data-testid="password" required>
+                        <div class="input-group-addon">
+                            <a href=""><i class="fa fa-eye-slash" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="form-group toggle-providers">
