--- a/views/pwRecovery/pwrecovery.hbs
+++ b/views/pwRecovery/pwrecovery.hbs
@@ -23,12 +23,12 @@
 					<input type="hidden" name="resetId" value="{{resetId}}" />
 					<div class="form-group">
 						<label>Neues Passwort</label>
-						<input type="password" data-testid="password" name="password" id="password" class="form-control form-control-lg" placeholder="***************" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
+						<input type="password" autocomplete="new-password" data-testid="password" name="password" id="password" class="form-control form-control-lg" placeholder="***************" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
 								title="{{> "lib/forms/password-hint" plaintext=true}}" required>
 					</div>
 					<div class="form-group">
 						<label>Neues Passwort wiederholen</label>
-						<input type="password" name="password_control" id="password_control" class="form-control form-control-lg" placeholder="***************" title="{{> "lib/forms/password-hint" plaintext=true}}" required>
+						<input type="password" autocomplete="new-password" name="password_control" id="password_control" class="form-control form-control-lg" placeholder="***************" title="{{> "lib/forms/password-hint" plaintext=true}}" required>
 					</div>
 
                     {{> "lib/components/csrfInput"}}
