added some details

--- a/views/courses/components/topics.hbs
+++ b/views/courses/components/topics.hbs
@@ -161,7 +161,7 @@
 		<div class="col-sm-12 mt-3">
 			<div class="list-group">
 				{{#if @root.newLessons}}
-					<div id="topic-list" data-courseId="{{@root._id}}">
+					<div id="topic-list-new-editor" data-courseId="{{@root._id}}">
 						{{#each newLessons}}
 							{{#if this.visible}}
 								<!-- TOPIC IS NOT HIDDEN, teacher and student has access -->
