Displaying Alert Icon for dangerous files in student submissions

--- a/static/styles/homework/submissions.scss
+++ b/static/styles/homework/submissions.scss
@@ -160,6 +160,12 @@
       color: $primaryColor;
       cursor: pointer;
     }
+    .fa.disabled {
+      color: $colorDarkerGrey;
+    }
+    a {
+      text-decoration: none;
+    }
   }
 }
 
