changed username field type

--- a/views/authentication/forms/pwrecovery.hbs
+++ b/views/authentication/forms/pwrecovery.hbs
@@ -1,6 +1,6 @@
 <div class="form-group">
     <label class="control-label" for="username">Ihr Nutzername</label>
-    <input type="email"
+    <input type="text"
            autocomplete="username"
            name="username"
            id="username"
