--- a/views/authentication/forms/login.hbs
+++ b/views/authentication/forms/login.hbs
@@ -8,7 +8,7 @@
                 <input type="hidden" name="challenge" value={{challenge}} />
 
                 <div class="form-group">
-                    <input type="email" autocomplete="username" name="username" class="form-control form-control-lg" placeholder="E-Mail / Nutzername" data-testid="username" required>
+                    <input type="text" autocomplete="username" name="username" class="form-control form-control-lg" placeholder="E-Mail / Nutzername" data-testid="username" required>
                     <div class="input-group mt-1" id="show_hide_password">
                         <input type="password" autocomplete="current-password" name="password" class="form-control form-control-lg" placeholder="Passwort" data-testid="password" required>
                         <div class="input-group-addon">
@@ -49,7 +49,8 @@
                 {{> "lib/components/csrfInput"}}
                 <div class="form-group">
                     {{#if notification.statusCode}}
-                        <input type="submit" id="submit-login" class="btn btn-block btn-primary btn-login" value="Anmelden" data-testid="submit-login" data-timeout="{{notification.timeToWait}}" disabled/>
+                        <input 
+						submit" id="submit-login" class="btn btn-block btn-primary btn-login" value="Anmelden" data-testid="submit-login" data-timeout="{{notification.timeToWait}}" disabled/>
                     {{else}}
                         <input type="submit" id="submit-login" class="btn btn-block btn-primary btn-login" value="Anmelden" data-testid="submit-login" />
                     {{/if}}
