--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -84,4 +84,9 @@
     </div>
     {{/content}}
     {{/embed}}
+    {{#embed "lib/components/modal-information" class="danger-modal" title="Achtung"}}
+	    {{#content "fields"}}
+		    {{> "files/forms/form-virus-danger"}}
+	    {{/content}}
+    {{/embed}}
 </section>
