--- a/views/teams/forms/form-add-member.hbs
+++ b/views/teams/forms/form-add-member.hbs
@@ -9,7 +9,7 @@
     <select name="userIds[]" multiple data-placeholder="Personen auswählen">
         {{#each users}}
             <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
-                    {{this.firstName}} {{this.lastName}}
+                    {{this.lastName}}, {{this.firstName}}
             </option>
         {{/each}}
     </select>
