--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -93,11 +93,13 @@ label {
 	font-weight: bold;
 }
 
-video,
-audio {
+video {
 	width: 100%;
 	height: auto;
 	object-fit: cover;
+}
+audio {
+	width: 100%;
 }
 
 .pagination-wrapper {
