fix spelling mistake

--- a/views/help/contact.hbs
+++ b/views/help/contact.hbs
@@ -16,7 +16,7 @@
   </form>
 
   <div class="team_form {{#unless teamFormIsActive}}hidden{{/unless}}">
-    <p>Danke für dein Feedback, es wird direkt an das Entwicklungsteam der {{theme.short_title}} gesendet. Bitte achte darauf, keine passwörter und andere sensible Daten mitzusenden.</p>
+    <p>Danke für dein Feedback, es wird direkt an das Entwicklungsteam der {{theme.short_title}} gesendet. Bitte achte darauf, keine Passwörter und andere sensible Daten mitzusenden.</p>
     <p>Welche Art von Feedback möchtest du uns senden?</p>
     <fieldset class="switch_wrapper" id="message_type">
       <div class="switch">
