Send user agent data checked by default

--- a/views/help/forms/form_wish.hbs
+++ b/views/help/forms/form_wish.hbs
@@ -36,7 +36,7 @@
 <label>
 <div class="row">
 	<div class="col-xs-2">
-		<input type="checkbox" id="consent" name="consent" value="true">
+		<input type="checkbox" id="consent" name="consent" value="true" checked>
 	</div>
 	<div class="col-xs-10">
 		<span class="control-label" for="consent">
