--- a/views/courses/components/topics.hbs
+++ b/views/courses/components/topics.hbs
@@ -1,6 +1,11 @@
 <div class="row">
 	{{#userHasPermission "COURSE_EDIT"}}{{#unless @root.isArchived}}
 			<div class="col-sm-12">
+                <a href="#" data-courseId="{{../_id}}" class="btn btn-secondary btn-sm pull-right ml-1 btn-import-topic-from-template"
+                   title="Thema aus Vorlage">
+                    <i class="fa fa-exchange" aria-hidden="true"></i>
+                    <span>Thema aus Vorlage erstellen</span>
+                </a>
 				<a href="#" data-courseId="{{../_id}}" class="btn btn-secondary btn-sm pull-right ml-1 btn-import-topic"
 					title="Thema importieren">
 					<i class="fa fa-exchange" aria-hidden="true"></i>
