--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -475,3 +475,27 @@
   color: $colorDanger;
 }
 
+.sc-image-chooser {
+	width: 100%;
+	p {
+		padding-top: 10px;
+	}
+	input[type=radio]:checked + label img {
+		border: 1px solid #fff;
+		box-shadow: 0 0 3px 3px #090;
+	}
+
+	/* Stuff after this is only to make things more pretty */
+	input[type=radio] + label img {
+		border: 1px dashed #444;
+		width: 150px;
+		height: 150px;
+		transition: 500ms all;
+	}
+
+	input[type=radio]:checked + label img {
+		transform:
+			rotateZ(-5deg)
+			rotateX(5deg);
+	}
+}
