--- a/views/courses/forms/form-import-topic-from-template.hbs
+++ b/views/courses/forms/form-import-topic-from-template.hbs
@@ -1,13 +1,44 @@
 <div class="form-group">
     <label for="invitation">Füge einen Code ein, um TEMPLATE TEMPLATE TEMPLATE.</label>
 	<div class="row">
-		<div class="col-md-4">a</div>
-		<div class="col-md-4">b</div>
-		<div class="col-md-4">c</div>
+        <div class="sc-image-chooser">
+			<div class="col-sm-4">
+				<input type="radio" id="contactChoice1"
+					   name="shareToken" value="sKJYoCm9Z" class="hidden" >
+				<label for="contactChoice1">
+					<div class="template-option">
+					<img
+						src="//placekitten.com/150/150"
+						alt="Template 1" />
+						<p>Template 1</p>
+					</div>
+				</label>
+        	</div>
+            <div class="col-sm-4">
+            <input type="radio" id="contactChoice2"
+                   name="shareToken" value="Ox7u_GK_k" class="hidden">
+            <label for="contactChoice2">
+                <div class="template-option">
+                    <img
+                            src="//placekitten.com/150/151"
+                            alt="Template 1" />
+                    <p>Template 2</p>
+                </div>
+			</label>
+			</div>
+            <div class="col-sm-4">
+            <input type="radio" id="contactChoice3"
+                   name="shareToken" value="Cm7s-cmHS" class="hidden">
+            <label for="contactChoice3">
+                <div class="template-option">
+                    <img
+                            src="//placekitten.com/150/152"
+                            alt="Template 1" />
+                    <p>Template 3</p>
+                </div>
+			</label>
+        </div>
+		</div>
 	</div>
-
-    <input class="form-control" name="shareToken" type="text" />
     <input class="form-control" hidden name="courseId" />
-    <br/><p><i class="fa fa-exclamation-triangle"></i> <strong>Achtung:</strong> Tausche im Thema enthaltene, mit Nutzerdaten befüllte Tools (z.B. nexBoard, Etherpad, GeoGebra) nachträglich manuell aus, da Änderungen daran sich sonst auf den Original-Kurs auswirken! Dateien (Bilder, Videos, Audio) sowie verlinktes Material sind nicht betroffen und können unverändert bleiben.
-    </p>
 </div>
