--- a/views/topic/topic-edtr.hbs
+++ b/views/topic/topic-edtr.hbs
@@ -10,10 +10,7 @@
 
 <body>
     <div id="editor"></div>
-    <script>
-        var BACKEND_URL = "{{ backendUrl }}";
-    </script>
-    <script type="text/javascript" src="{{edtrSource}}"></script>
+    <script crossorigin type="text/javascript" src="{{edtrSource}}"></script>
 </body>
 
 </html>
