add deep linking

--- a/views/courses/deep-link.hbs
+++ b/views/courses/deep-link.hbs
@@ -15,10 +15,9 @@
 								<h3>Inhalt gewählt</h3>
 								<h4>Bitte speichern, um {{title}} in den Kurs einzufügen.</h4>
 							</div>
-
 						</div>
 					</section>
-			</div>
+				</section>
 			</div>
 		</main>
 	{{/content}}
