--- a/views/courses/add-tool.hbs
+++ b/views/courses/add-tool.hbs
@@ -45,6 +45,7 @@
 					<input type="hidden" name="secret" value="{{secret}}" />
 					<input type="hidden" name="courseId" value="{{courseId}}" data-force-value="true" />
 					<input type="hidden" name="privacy_permission" value="{{privacy_permission}}" />
+					{{> "lib/components/csrfInput"}}
 				{{/content}}
 			{{/embed}}
             {{/userHasPermission}}
