--- a/views/administration/dashboard.hbs
+++ b/views/administration/dashboard.hbs
@@ -78,7 +78,7 @@
 							{{/userHasPermission}}
 							{{#userHasPermission 'DATASOURCES_VIEW'}}
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<div class="card h-100 admin-card" onclick="location.href='/administration/datasources/'">
+									<div class="card h-100 teacher-option" onclick="location.href='/administration/datasources/'">
 										<div class="card-block homework">
 											<div class="card-text">
 												<h2 class="h4"><i class="fa fa-database"></i> Datenquellen verwalten</h2>
