disable other options

--- a/views/administration/forms/form-classes-edit.hbs
+++ b/views/administration/forms/form-classes-edit.hbs
@@ -19,9 +19,9 @@
 <div class="form-group">
 	<label>Schuljahr <sup>*</sup></label>
 	<select class="linked" name="schoolyear" data-linktext data-placeholder="Schuljahr auswählen"
-		{{#ifCond edit '&&' isCustom}}{{#unless @root.class.keepYear}}disabled="true" {{/unless}}{{/ifCond}}>
+		{{#ifCond edit '&&' isCustom}}{{#unless @root.class.keepYear}}disabled {{/unless}}{{/ifCond}}>
 		{{#each schoolyears}}
-			<option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
+			<option value="{{this._id}}" {{#if this.selected}}selected{{else}}{{#ifeq ../mode "upgrade"}}disabled{{/ifeq}}{{/if}}>
 				{{this.name}}
 			</option>
 		{{/each}}
