Added EBS (Alert) System

--- a/views/authentication/forms/login.hbs
+++ b/views/authentication/forms/login.hbs
@@ -1,3 +1,4 @@
+{{> "lib/components/alert"}}
 <section id="loginarea" class="card">
     <div class="card-block" data-step="2" data-intro="Wenn Ihre Schule bereits über {{theme.title}}-Accounts verfügt, dann können Sie sich hier mit Ihren persönlichen Anmeldedaten einloggen.">
         <h2 class="h4 card-title">Anmeldung für registrierte Nutzer</h2>
