--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -183,6 +183,8 @@
                     </ul>
                 </nav>
 
+            {{> "lib/components/alert"}}
+
                 <section class="section-title">
                     <div class="container-fluid">
                         <div class="row" id="titlebar">
