--- a/views/courses/forms/form-import-topic-from-template.hbs
+++ b/views/courses/forms/form-import-topic-from-template.hbs
@@ -1,44 +1,70 @@
 <div class="form-group">
-    <label for="invitation">Füge einen Code ein, um TEMPLATE TEMPLATE TEMPLATE.</label>
-	<div class="row">
-        <div class="sc-image-chooser">
-			<div class="col-sm-4">
-				<input type="radio" id="contactChoice1"
-					   name="shareToken" value="sKJYoCm9Z" class="hidden" >
-				<label for="contactChoice1">
-					<div class="template-option">
-					<img
-						src="//placekitten.com/150/150"
-						alt="Template 1" />
-						<p>Template 1</p>
-					</div>
-				</label>
-        	</div>
+    <p>Starte eigene Themen mit unseren beispielhaften Vorlagen:<p>
+    <div class="sc-image-chooser">
+        <div class="row">
             <div class="col-sm-4">
-            <input type="radio" id="contactChoice2"
-                   name="shareToken" value="Ox7u_GK_k" class="hidden">
-            <label for="contactChoice2">
-                <div class="template-option">
-                    <img
-                            src="//placekitten.com/150/151"
-                            alt="Template 1" />
-                    <p>Template 2</p>
-                </div>
-			</label>
-			</div>
+                <input type="radio" id="templateChoice1"
+                       name="shareToken" value="topic-template-3" class="hidden">
+                <label for="templateChoice1">
+                    <div class="template-option">
+                        <img
+                                src="/images/topic-templates/template_icon_3.svg"
+                                alt="Vorlage Klimawandel: Einstieg"/>
+                        <p>Klimawandel: Einstieg</p>
+                    </div>
+                </label>
+            </div>
             <div class="col-sm-4">
-            <input type="radio" id="contactChoice3"
-                   name="shareToken" value="Cm7s-cmHS" class="hidden">
-            <label for="contactChoice3">
-                <div class="template-option">
-                    <img
-                            src="//placekitten.com/150/152"
-                            alt="Template 1" />
-                    <p>Template 3</p>
-                </div>
-			</label>
-        </div>
+                <input type="radio" id="templateChoice2"
+                       name="shareToken" value="topic-template-2" class="hidden">
+                <label for="templateChoice2">
+                    <div class="template-option">
+                        <img
+                                src="/images/topic-templates/template_icon_2.svg"
+                                alt="Vorlage Klimawandel, Demokratie"/>
+                        <p>Klimawandel, Demokratie</p>
+                    </div>
+                </label>
+            </div>
+            <div class="col-sm-4">
+                <input type="radio" id="templateChoice3"
+                       name="shareToken" value="topic-template-1" class="hidden">
+                <label for="templateChoice3">
+                    <div class="template-option">
+                        <img
+                                src="/images/topic-templates/template_icon_1.svg"
+                                alt="Vorlage Klimawandel: Arbeitsphase"/>
+                        <p>Klimawandel: Arbeitsphase</p>
+                    </div>
+                </label>
+            </div>
 		</div>
-	</div>
-    <input class="form-control" hidden name="courseId" />
+		<div class="row">
+            <div class="col-sm-4">
+                <input type="radio" id="templateChoice4"
+                       name="shareToken" value="topic-template-4" class="hidden">
+                <label for="templateChoice4">
+                    <div class="template-option">
+                        <img
+                                src="/images/topic-templates/template_icon_4.svg"
+                                alt="Vorlage Story-Telling mit Beispiel"/>
+                        <p>Story-Telling mit Beispiel</p>
+                    </div>
+                </label>
+            </div>
+            <div class="col-sm-4">
+                <input type="radio" id="templateChoice5"
+                       name="shareToken" value="topic-template-5" class="hidden">
+                <label for="templateChoice5">
+                    <div class="template-option">
+                        <img
+                                src="/images/topic-templates/template_icon_5.svg"
+                                alt="Vorlage neXboard als Mindmap"/>
+                        <p>neXboard als Mindmap</p>
+                    </div>
+                </label>
+            </div>
+        </div>
+    </div>
+    <input class="form-control" hidden name="courseId"/>
 </div>
