--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -480,22 +480,16 @@
 	p {
 		padding-top: 10px;
 	}
+
 	input[type=radio]:checked + label img {
-		border: 1px solid #fff;
-		box-shadow: 0 0 3px 3px #090;
+		border: 1px solid $primaryColor;
+		box-shadow: 0 0 3px 3px $primaryColor;
 	}
 
 	/* Stuff after this is only to make things more pretty */
 	input[type=radio] + label img {
-		border: 1px dashed #444;
 		width: 150px;
 		height: 150px;
-		transition: 500ms all;
-	}
-
-	input[type=radio]:checked + label img {
-		transform:
-			rotateZ(-5deg)
-			rotateX(5deg);
+		cursor: pointer;
 	}
 }
