--- a/theme/open/views/authentication/home.hbs
+++ b/theme/open/views/authentication/home.hbs
@@ -41,7 +41,10 @@
 							<div class="form-group">
 								Du möchtest gerne Mitglied in unserem HPI Schul-Cloud Team werden? Wir suchen:
 							</div>
-							<a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/web-developer-im-projekt-schul-cloud.html" rel="noopener" target="_blank">Web Developer</a></br>
+							<a class="mr-2" href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/web-developer-im-projekt-schul-cloud.html" 
+								rel="noopener" target="_blank">Web Developer</a>
+							<a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/system-engineer-dev-ops-mw.html"
+								rel="noopener" target="_blank">DevOps</a><br>
 						</div>
 					</section>
 
