--- a/views/community/community.hbs
+++ b/views/community/community.hbs
@@ -89,8 +89,14 @@
             <p>
                 Du möchtest gerne Mitglied in unserem HPI Schul-Cloud Team werden? Wir suchen:
                 <br />
-                <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/web-developer-im-projekt-schul-cloud.html" rel="noopener" target="_blank">Web Developer (m/w/d) im Projekt HPI Schul-Cloud</a>
-
+                <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/web-developer-im-projekt-schul-cloud.html" 
+                    rel="noopener" target="_blank">
+                    Web Developer (m/w/d) im Projekt HPI Schul-Cloud
+                </a> <br>
+                <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/system-engineer-dev-ops-mw.html"
+                    rel="noopener" target="_blank">
+                    System Engineer Dev-Ops (m/w/d) im Projekt HPI Schul-Cloud
+                </a>
             </p>
         {{/content}}
     {{/embed}}
