re-added google play icon

--- a/theme/thr/views/lib/extended_footer.hbs
+++ b/theme/thr/views/lib/extended_footer.hbs
@@ -26,15 +26,14 @@
 			<div class="col-md-4">
 				<h2 class="h4">Mobile App</h2>
 				<div class="row mobile-app">
-					<!--
 					<div class="col-6 android-app">
 						<a
-							href='https://play.google.com/store/apps/details?id=org.schulcloud.mobile&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' target="_blank" rel="noopener">
+							href='https://play.google.com/store/apps/details?id=org.schulcloud.android&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' target="_blank" rel="noopener">
 							<img alt='Jetzt bei Google Play'
 								src='https://s3.hidrive.strato.com/schul-cloud-hpi/images/google-play-badge.png'/>
 						</a>
 					</div>
-					-->
+					<!--
 					<div class="col-6 ios-app">
 						<a
 							href='https://testflight.apple.com/join/7i2xN7hH' target="_blank" rel="noopener">
@@ -42,6 +41,7 @@
 								src='https://s3.hidrive.strato.com/schul-cloud-hpi/images/apple-app-store-badge.svg'/>
 						</a>
 					</div>
+					-->
 				</div>
 				<h2 class="h4 card-title">Stellenausschreibungen</h2>
 				<div class="form-group">
