--- a/views/lib/components/alert.hbs
+++ b/views/lib/components/alert.hbs
@@ -5,15 +5,17 @@
             <span aria-hidden="true">&times;</span>
         </button>
         <div class="row">
-            <div class="col-xs-2 col-sm-1 text-center">
+            <div class="col-xs-2 col-sm-1 text-center hidden-xs-down">
                 <i class="fa fa-info-circle" style="font-size: 25px;"></i>
             </div>
-            <div class="col-xs-10 col-sm-11">
+            <div class="col-xs-12 col-sm-11">
                 {{#if this.title}}<h6>{{this.title}}</h6>{{/if}}
                 {{{this.text}}} 
-                <div class="text-xs-right">
-                    <a target="_blank" rel="noopener noreferrer" href="http://status.schul-cloud.org">mehr erfahren...</a>
-                </div>
+                {{#if this.url}}
+                    <div class="text-xs-right">
+                        <a class="text-nowrap" target="_blank" rel="noopener noreferrer" href="{{this.url}}">mehr erfahren...</a>
+                    </div>
+                {{/if}}
             </div>
         </div>
     </div>
