SC-2606 update footer main

--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -8,6 +8,8 @@
                 <a href="/impressum">Impressum</a>
                 <span> - </span>
                 Datenschutzerklärung: <a href="/datenschutz">HPI</a> / <a href="{{@root.theme.documents.specificFiles.privacyExemplary}}" target="_blank" rel="noopener">Muster Schulen</a>
+				<span> - </span>
+                <a href="{{@root.theme.documents.specificFiles.termsOfUseSchool}}" target="_blank" rel="noopener">Nutzungsordnung</a>
                 <span> - </span>
                 <a href="mailto:info@schul-cloud.org?subject=Schul_Cloud%20Anfrage" target="_blank" rel="noopener">Kontakt</a>
                 <span> - </span>
