SC-2608 update footer for open

--- a/theme/open/views/lib/extended_footer.hbs
+++ b/theme/open/views/lib/extended_footer.hbs
@@ -13,6 +13,7 @@
 				<ul>
 					<li><a href="/impressum">Impressum</a></li>
 					<li><a href="/datenschutz">Datenschutzerklärung</a></li>
+					<li><a href="{{@root.theme.documents.specificFiles.termsOfUseSchool}}" target="_blank" rel="noopener">Nutzungsordnung</a></li>
 					<li><a href="https://github.com/schul-cloud/" target="_blank" rel="noopener">GitHub</a></li>
 				</ul>
 			</div>
